# nekos-best.py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
nekosbest/: __init__.py  client.py  errors.py  http.py  models.py  types.py
tests/: test_client.py  test_errors.py  test_http.py  test_models.py  test_public_api.py
