[metadata]
name = nekosbest
description = A simple async Python wrapper for nekos.best API.
version = attr: nekosbest.__version__
license = AGPLv3
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = PredaaA (Predä#1001)
url = https://github.com/nekos-best/nekos-best.py
project_urls =
    Issue Tracker = https://github.com/nekos-best/nekos-best.py/issues
    Source Code = https://github.com/nekos-best/nekos-best.py
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = False
packages = find_namespace:
python_requires = >=3.8
install_requires =
    aiohttp>=3.6.2,<3.7.3

[options.packages.find]
include =
    nekosbest